# d500-controller

./: .gitignore  CMakeLists.txt  resources.qrc
qml/: Controls.qml
qml/panels/: Connection.qml  Engine.qml
src/: ConnectionManager.cpp  ConnectionManager.h  EngineStats.cpp  EngineStats.h  ManualController.cpp  ManualController.h  NetworkStats.cpp  NetworkStats.h  SettingsManager.h  Settingsmanager.cpp  main.cpp
src/abstracts/: AbstractStats.cpp  AbstractStats.h
translations/: ua_UA.ts
